--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/faiq/spotify-refresh/issues"
   },
-  "homepage": "https://github.com/faiq/spotify-refresh"
+  "homepage": "https://github.com/faiq/spotify-refresh",
+  "dependencies": {
+    "request": "^2.53.0"
+  }
 }
